[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "jupyterhub_mlflow_auth"
author = "Tom Augspurger"
author-email = "tom.w.augspurger@gmail.com"
classifiers = ["License :: OSI Approved :: MIT License"]

requires=[
    "tornado>=5.0.0",
    "jupyterhub>=1.0.0",
]
requires-python=">=3.5"

[tool.flit.scripts]
jupyterhub-mlflow-auth = "jupyterhub_mlflow_auth:main"